--- a/book_store/book_outlet/templates/book_outlet/index.html
+++ b/book_store/book_outlet/templates/book_outlet/index.html
@@ -8,7 +8,7 @@
 {% block content %}
     <ul>
         {% for book in books %}
-        <li>{{book.title }}(Rating : {{ book.rating}})
+        <li><a href = "{{book.get_absolute_url}}">{{book.title }}</a>(Rating : {{ book.rating}})
 
         </li>
         {% endfor %}
